--- a/style.css
+++ b/style.css
@@ -11,3 +11,35 @@
 .container{
      margin-bottom: 100px;
 }
+.cat1{
+     background-color: orange;
+     padding: 10px 30px;
+     border-radius: 10px;
+
+}
+.cat2{
+     background-color: orchid;
+     padding: 10px 30px;
+     border-radius: 10px;
+}
+.cat3{
+     background-color: blue;
+     padding: 10px 30px;
+     border-radius: 10px;
+}
+.categories h1{
+     color: whitesmoke;
+}
+.categories img{
+     width: 100px;
+}
+.card{
+     border: none;
+     box-shadow: 5px 5px 10px;
+}
+.card-footer{
+     border-top: none;
+}
+footer{
+     text-align: center;
+}
